# LicheeRV-Nano-Kernel

./: .gitignore  Cargo.toml  boot.cmd  create-disk.sh  create-image.sh  flash-kernel.sh  image.its  kernel.its  linker.ld  run-qemu.sh  run.sh  sg2002-licheerv-nano-b.dtb  sg2002-licheerv-nano-b.dts
.cargo/: config.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  setup.sh
src/: context.rs  ecall.rs  ext4.rs  filesystem.rs  hart.rs  main.rs  print.rs  sdmmc.rs  thread.rs  timer_interrupt.rs  trap_handler.rs
src/drivers/: mod.rs
src/drivers/block_device/: mod.rs  sdhci.rs  sdmmc.rs
src/drivers/filesystem/: ext4.rs  mod.rs
src/trap_handler/: entry.rs  mod.rs
